welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:2: error: not found: value posFinal
	while(!posFinal){
               ^ColumnByColumn:6: error: not found: value x
			setPos(x=getX()+1 ,y=0)
                               ^